# BCNeMotorsportSimulation_2023

./: README.md
model_cat/: CMakeLists.txt  package.xml
model_cat/Parameters/: param.yaml
model_cat/launch/: visualitza_modelbicicletaCAT15x.py  visualitza_modelbicicletaCAT15x_gazebo.py
model_cat/meshes/: wheelFL.stl  wheelFR.stl  wheelRL.stl  wheelRR.stl
model_cat/plugins/include/: CalculEstat.hpp  CalculForces.hpp  Parametres.hpp  modelbicicleta.hpp
model_cat/plugins/src/: CalculEstat.cpp  CalculForces.cpp  Parametres.cpp  Pluggin.cpp  Update.cpp  modelbicicleta.cpp
model_cat/urdf/: model4WCAT15x.urdf  modelbicicletaCAT15x.sdf  modelbicicletaCAT15x.urdf  modelbicicletaCAT15x_plugin.urdf
